--- a/src/index.css
+++ b/src/index.css
@@ -36,4 +36,35 @@
 
 }
 
+.input-st {
+	@apply  appearance-none rounded-none relative block px-3 py-4 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm;
+}
 
+.bt-gray {
+	@apply  py-4 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-gray-400 hover:bg-gray-500 focus:outline-none focus:ring-2 focus:ring-offset-2;
+
+}
+.bt-indigo {
+	@apply  relative justify-center py-4 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500;
+}
+
+.bt-red {
+	@apply  justify-center py-4 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-red-500 hover:bg-red-600 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-700
+}
+
+.bt-yellow {
+	@apply  justify-center py-4 px-4 border border-transparent text-sm font-medium rounded-md text-black bg-yellow-400 hover:bg-yellow-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-yellow-600
+}
+
+
+
+.input-label{
+	@apply  block text-sm font-bold mb-2 text-left;
+}
+
+.input-msg-red{
+	@apply block text-red-700 text-xs mt-2 pl-1 text-left
+}
+.input-msg-blue{
+	@apply block text-blue-700 text-xs mt-2 pl-1 text-left
+}
